added first css

--- a/style/learn.css
+++ b/style/learn.css
@@ -25,3 +25,12 @@ body{
 	background-color: #4CAF50;
 	color: white;
 }
+
+h3 {
+    text-align: center;
+}
+
+.box1 {
+    background-color: rgb(248, 237, 237);
+}
+
