--- a/style/learn.css
+++ b/style/learn.css
@@ -34,3 +34,26 @@ h3 {
     background-color: rgb(248, 237, 237);
 }
 
+.img1{
+	width: 100%;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+   
+}
+
+#surf {
+	width: 50%;
+}
+
+.box2 {
+	text-align: left;
+	margin: 0 8%;
+	font-size: 16px;
+	line-height: 25px;
+}
+
+.box3 {
+	margin-top: 50px;
+}
+
