--- a/style/learn.css
+++ b/style/learn.css
@@ -44,6 +44,10 @@ h3 {
 
 #surf {
 	width: 50%;
+	display: block;
+	margin-top: 50px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .box2 {
@@ -53,7 +57,8 @@ h3 {
 	line-height: 25px;
 }
 
-.box3 {
+.list {
 	margin-top: 50px;
+	display: inline-block;
 }
 
