--- a/style/help.css
+++ b/style/help.css
@@ -76,3 +76,17 @@ body{
 	text-decoration: none;
 	line-height: 0.25em;
 }
+
+.bottom_additional_info {
+	padding-left: 25%;
+	padding-right: 25%;
+	font-family: "Arial", Helvetica, sans-serif;
+	font-size: 20px;
+	line-height: 1.5em;
+	overflow: hidden;
+    	background-color: rgba(24, 22, 22, 0.7);
+}
+
+.bottom_additional_info h2{
+	color: #f2f2f2;
+}
